initial state with empty items

--- a/Ultramarine.VSCodeExtension/src/vivaldi/style.scss
+++ b/Ultramarine.VSCodeExtension/src/vivaldi/style.scss
@@ -65,15 +65,15 @@ $task-bg-color: color('blue-grey', 'base');
 }
 
 .p-small {
-  padding: 8px;
+  padding: 8px !important;
 }
 
 .plr-small {
-  padding: 0 8px;
+  padding: 0 8px !important;
 }
 
 .mlr-small {
-  margin: 0 8px;
+  margin: 0 8px !important;
 }
 
 .mt-small {
