--- a/Ultramarine.GeneratorRecipes/XmlSchemaBaseTask.tt
+++ b/Ultramarine.GeneratorRecipes/XmlSchemaBaseTask.tt
@@ -23,35 +23,29 @@
 #>
 
 <xs:schema id="TaskSchema" elementFormDefault="qualified" xmlns:xs="http://www.w3.org/2001/XMLSchema">
-<xs:include schemaLocation="Variable.xsd" />
-  <xs:element name="Task" type="TaskStruct" />
-  
-	<xs:complexType name="TaskStruct">
-	  <xs:sequence>
-		<xs:element name="Name" type="xs:string" minOccurs="0" maxOccurs="1"/>
-		<xs:element name="Description" type="xs:string" minOccurs="0" maxOccurs="1"/>
-		<xs:element name="Input" minOccurs="0" maxOccurs="1">
-		  <xs:complexType>
-			<xs:sequence maxOccurs="unbounded">
-			  <xs:any processContents="lax"/>
-			</xs:sequence>
-		  </xs:complexType>
-		</xs:element>
-		<xs:element name="Output" minOccurs="0" maxOccurs="1">
-		  <xs:complexType>
-			<xs:sequence maxOccurs="unbounded">
-			  <xs:any processContents="lax"/>
-			</xs:sequence>
-		  </xs:complexType>
-		</xs:element>        
-		<xs:element name="ConnectedWith" type="xs:string" minOccurs="0" maxOccurs="1"/>
-		<xs:element name="Variables">
-		  <xs:complexType>
-			<xs:sequence>
-			  <xs:element ref="Variable" minOccurs="0" maxOccurs="unbounded"/>
-			</xs:sequence>
-		  </xs:complexType>
-		</xs:element>		
-	  </xs:sequence>  
-	</xs:complexType>
-</xs:schema>
+    <xs:include schemaLocation="Variable.xsd" />
+
+    <xs:element name="Task" type="TaskStruct"/>
+
+    <xs:complexType name="TaskStruct">
+      <xs:complexContent>
+        <xs:extension base="TaskWithElements">
+          <xs:attribute name="Name" type="xs:string" />
+          <xs:attribute name="Description" type="xs:string" />
+          <xs:attribute name="ConnectedWith" type="xs:string" />
+        </xs:extension>
+      </xs:complexContent>
+    </xs:complexType>
+
+    <xs:complexType name="TaskWithElements">
+      <xs:sequence>
+        <xs:element name="Variables" minOccurs="0" maxOccurs="unbounded">
+          <xs:complexType>
+            <xs:sequence>
+              <xs:element ref="Variable" minOccurs="0" maxOccurs="unbounded"/>
+            </xs:sequence>
+          </xs:complexType>
+        </xs:element>
+      </xs:sequence>
+    </xs:complexType>
+  </xs:schema>
