--- a/Ultramarine.GeneratorRecipes/XmlSchemaBaseTask.tt
+++ b/Ultramarine.GeneratorRecipes/XmlSchemaBaseTask.tt
@@ -25,24 +25,24 @@
 <xs:schema id="TaskSchema" elementFormDefault="qualified" xmlns:xs="http://www.w3.org/2001/XMLSchema">
     <xs:include schemaLocation="Variable.xsd" />
 
-    <xs:element name="Task" type="TaskStruct"/>
+    <xs:element name="task" type="taskStruct"/>
 
-    <xs:complexType name="TaskStruct">
+    <xs:complexType name="taskStruct">
       <xs:complexContent>
-        <xs:extension base="TaskWithElements">
-          <xs:attribute name="Name" type="xs:string" />
-          <xs:attribute name="Description" type="xs:string" />
-          <xs:attribute name="ConnectedWith" type="xs:string" />
+        <xs:extension base="taskWithElements">
+          <xs:attribute name="name" type="xs:string" use="required"/>
+          <xs:attribute name="description" type="xs:string" />
+          <xs:attribute name="connectedWith" type="xs:string" />
         </xs:extension>
       </xs:complexContent>
     </xs:complexType>
 
-    <xs:complexType name="TaskWithElements">
+    <xs:complexType name="taskWithElements">
       <xs:sequence>
-        <xs:element name="Variables" minOccurs="0" maxOccurs="unbounded">
+        <xs:element name="variables" minOccurs="0" maxOccurs="unbounded">
           <xs:complexType>
             <xs:sequence>
-              <xs:element ref="Variable" minOccurs="0" maxOccurs="unbounded"/>
+              <xs:element ref="variable" minOccurs="0" maxOccurs="unbounded"/>
             </xs:sequence>
           </xs:complexType>
         </xs:element>
